Fix autocomplete on mobile devices

--- a/app/theme/client/imports/general/theme_gmh.css
+++ b/app/theme/client/imports/general/theme_gmh.css
@@ -465,6 +465,10 @@ body {
     }
 }
 
+.messages-modal .rcx-autocomplete .rcx-input-box {
+    width: 100%;
+}
+
 /*
  *  Autocomplete input
  */
